# Hackathon-2-Phase-1

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: python-cli-todo-architect.md  quality-review-orchestrator.md  task-strategy-architect.md  todo-product-analyst.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/001-todo-cli-core/: 001-core-todo-specification.spec.prompt.md  002-core-todo-implementation-plan.plan.prompt.md  003-core-todo-task-breakdown.tasks.prompt.md  004-core-todo-implementation-success.green.prompt.md  005-rich-tui-implementation.refactor.prompt.md  006-tui-enhancements-tabs-edit.refactor.prompt.md  007-tui-ux-improvements-focus-buttons.refactor.prompt.md  008-fix-tui-edit-modal.refactor.prompt.md  009-project-documentation-readme.misc.prompt.md
history/prompts/constitution/: 001-initial-python-cli-todo-constitution.constitution.prompt.md
specs/001-todo-cli-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-core/checklists/: requirements.md
specs/001-todo-cli-core/contracts/: daemon_api.yaml
src/todo_cli/client/: base.py  commands.py  lifecycle.py  main.py  service.py  tui.py
src/todo_cli/daemon/: main.py  store.py
src/todo_cli/models/: task.py
tests/unit/: test_add.py  test_delete.py  test_list.py  test_update.py
