[project]
name = "todo-cli"
version = "0.1.0"
description = "A Python CLI Todo application with in-memory storage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "textual>=1.0.0",
]

[project.scripts]
todo = "todo_cli.client.main:app"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []
